# wupbro

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  app.doql.less  goal.yaml  index.html  local.dev.txt  project.sh  pyproject.toml  tree.txt
.github/workflows/: trigger-org-sync.yml
.wupbro/: events.jsonl
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
testql-scenarios/: generated-api-integration.testql.toon.yaml  generated-api-smoke.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_dashboard.py  test_drivers.py  test_events.py
wupbro/: __init__.py  __main__.py  main.py  models.py  notifications.py  storage.py
wupbro/routers/: __init__.py  dashboard.py  drivers.py  events.py  notifications.py
wupbro/templates/: index.html
